[gd_scene load_steps=3 format=3 uid="uid://bh3k8y5m4rp1w"]

[ext_resource type="Script" path="res://assets/cardfaces/base_cardface.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/cardfaces/default_border.png" id="2_border"]

[node name="BaseCardFace" type="Control"]
custom_minimum_size = Vector2(512, 768)
layout_mode = 3
anchors_preset = 0
offset_right = 512.0
offset_bottom = 768.0
script = ExtResource("1_script")

[node name="BorderTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_border")
expand_mode = 1
stretch_mode = 5

[node name="PortraitGuide" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -205.0
offset_right = 179.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5, 0.5, 0.5, 0.3)

[node name="Label" type="Label" parent="PortraitGuide"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "PORTRAIT
AREA
358Ã—410"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SafeArea" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 100.0
offset_right = -26.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 0.1)

[node name="Label" type="Label" parent="SafeArea"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "Safe Area
(avoid rank/suit/ability)"
vertical_alignment = 1
autowrap_mode = 2
